ch08/builder-with-attribute/builder-usage/tests/fails/build_struct_field_not_implement_default.stderr
warning: type `__notDefaultAssertion` should have an upper camel case name
 --> tests/fails/build_struct_field_not_implement_default.rs:9:5
  |
9 |     not: DoesNotImplementDefault,
  |     ^^^ help: convert the identifier to upper camel case: `NotDefaultAssertion`
  |
  = note: `#[warn(non_camel_case_types)]` (part of `#[warn(nonstandard_style)]`) on by default

error[E0277]: the trait bound `DoesNotImplementDefault: Default` is not satisfied
 --> tests/fails/build_struct_field_not_implement_default.rs:9:10
  |
9 |     not: DoesNotImplementDefault,
  |          ^^^^^^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `DoesNotImplementDefault`
  |
  = help: see issue #48214
help: consider annotating `DoesNotImplementDefault` with `#[derive(Default)]`
  |
3 + #[derive(Default)]
4 | struct DoesNotImplementDefault;
  |

error[E0277]: the trait bound `DoesNotImplementDefault: Default` is not satisfied
 --> tests/fails/build_struct_field_not_implement_default.rs:5:10
  |
5 | #[derive(Builder)]
  |          ^^^^^^^ the trait `Default` is not implemented for `DoesNotImplementDefault`
  |
note: required by a bound in `Option::<T>::unwrap_or_default`
 --> $RUST/core/src/option.rs
  |
  |     pub const fn unwrap_or_default(self) -> T
  |                  ----------------- required by a bound in this associated function
  |     where
  |         T: [const] Default,
  |            ^^^^^^^^^^^^^^^ required by this bound in `Option::<T>::unwrap_or_default`
  = note: this error originates in the derive macro `Builder` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider annotating `DoesNotImplementDefault` with `#[derive(Default)]`
  |
3 + #[derive(Default)]
4 | struct DoesNotImplementDefault;
  |
